prevent wrapping on sidebar database and collection names

--- a/src/internal-packages/sidebar/styles/sidebar-collection.less
+++ b/src/internal-packages/sidebar/styles/sidebar-collection.less
@@ -40,6 +40,7 @@
       overflow: hidden;
       text-overflow: ellipsis;
       color: @pw;
+      white-space: nowrap;
     }
 
     &:last-child {
